--- a/src/app/payment-details/payment-details.component.html
+++ b/src/app/payment-details/payment-details.component.html
@@ -1,1 +1,31 @@
-<app-payment-detail-form></app-payment-detail-form>
+<div class="jumbotron py-3">
+    <h1 class="display-4 text-center">Payment Detail Register</h1>
+</div>
+
+<div class="row">
+    <div class="col-md-6">
+        <app-payment-detail-form></app-payment-detail-form>
+    </div>
+    <div class="col-md-6">
+        <table class="table">
+            <thead class="thead-light">
+                <tr>
+                    <th>Card owner</th>
+                    <th>Card number</th>
+                    <th>Exp date</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let pd of service.list">
+                    <td >{{pd.CardOwnerName}}</td>
+                    <td>{{pd.CardNumber}}</td>
+                    <td >{{pd.ExpDate}}</td>
+                    <td>
+                        <i class="far fa-trash-alt fa-lg text-danger"></i>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
