--- a/src/app/payment-details/payment-details.component.html
+++ b/src/app/payment-details/payment-details.component.html
@@ -17,10 +17,11 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let pd of service.list">
-                    <td >{{pd.CardOwnerName}}</td>
-                    <td>{{pd.CardNumber}}</td>
-                    <td >{{pd.ExpDate}}</td>
+                <tr *ngFor="let pay of service.Paylist">
+                    
+                    <td >{{pay.CardOwnerName}}</td>
+                    <!-- <td>{{pay.CardNumber}}</td>
+                    <td >{{pay.ExpDate}}</td> -->
                     <td>
                         <i class="far fa-trash-alt fa-lg text-danger"></i>
                     </td>
